# SNESpico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mem.txt  merge.sh  receiver.cpp  setup.sh  t.txt
.github/workflows/: auto-merge.yml
snes/cpu/: Makefile  Ram.h  bus.cpp  bus.h  cpu.h  index.cpp  snes_cpu.cpp  snes_cpu.h  utils.h
snes/memory/: Makefile  bus.cpp  bus.h  index.cpp
src/: main.cpp
src/Utils/: List.cpp  List.h
src/filesystem/: fat32.cpp  fat32.h  filehandle.h  filesystem.h
src/filesystem/sd_card/: sd_card.cpp  sd_card.h
src/snes/: bus.cpp  bus.h
src/snes/cpu/: Ram.cpp  snes_cpu.cpp  snes_cpu.h
src/snes/rom/: Rom.cpp  Rom.h  SRam.cpp  SRam.h
